Changelog
=========

5.6-dev - (unreleased)
----------------------
* Bug fix: better fix for loading of geotagsClusterLayer.js
  [ichimdav #8523]

5.5 - (2013-03-15)
------------------
* Bug fix: load geotagsClusterLayer using dojo.require instead of loading it 
  with portal_javascripts
  [ichimdav #14039]

5.4 - (2013-01-25)
------------------
* Bug fix: fix location field @@rdf output
  [tiberich #13694]

5.3 - (2013-01-15)
------------------
* Bug fix: drill down geotags categories now return alphabetically sorted
  results
  [ichimdav #9989]
* Feature: added a checkbox enabled by default that will add  individual
  countries that are part of a country group instead of the group itself
  [ichimdav #9998]
* Feature: added point clustering support to map view
  [ichimdav #7337]
* Change: switched to version 2.8 of the arcgis Dojo library in order to have
  clustering support
  [ichimdav #7337]

5.2 - (2012-11-26)
------------------
* Bug fix: rdfencode geotags as geo:SpatialThing to stay generic, 
  since not all geotags are points, can also be Features/Polygons etc.
  [demarant refs #7409]

5.1 - (2012-11-22)
------------------
* Bug fix: map infoTemplate template is constructed only the information that 
  is available for that object
  [ichimdav #7337]
* Feature: rdf export of geotags now includes geonames URI with owl:sameAs.
  [demarant refs #7409]
* Bug fix: fix issue with map view crashing when urllib got a Description
  that couldn't quote because of unicode characters
  [ichimdav #10006]
* Feature: Now we export all tags as geo:Point including locations labels.
  [demarant refs #3425]
* Bug fix: corrected export of points according to wgs84 rdf vocabulary.
  [demarant refs #3425]
* Bug fix: use folder_listing and atct_topic_view macros to avoid errors when
  using the map on non Topic content types
  [ichimdav #3353]
* Feature: added rdf adapter for geotag field
  [tiberich, demarant, #3425]

5.0 - (2012-07-30)
------------------